--- a/PSFree/css/index.css
+++ b/PSFree/css/index.css
@@ -139,7 +139,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: white;
+    background-color: black;
+    color: white;
     border: 1px solid #ccc;
     padding: 20px;
     z-index: 1001;
